@@ -1,3 +1,7 @@
+2004-02-16  Richard Henderson  <rth@redhat.com>
+
+        * cse.c (cse_insn): Don't lose REG_NON_LOCAL_GOTO note.
+
 2004-02-11  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
 
 	* config/mips/mips.h (TARGET_OLDABI): Define. Use TARGET_NEWABI and
